2007-11-26  Zoltan Varga  <vargaz@gmail.com>

	* aot-runtime.c (mono_aot_init_vtable): Simplify this if MONO_ARCH_COMMON_VTABLE_TRAMPOLINE
	is defined.

2007-11-23  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (emit_class_name_table): Properly encode generic class names.
	
	* aot-compiler.c (compile_method): Correct check for generic method definitions.
	(encode_method_ref): No need to handle generic method definitions specially.

	* mini.h (MONO_AOT_FILE_VERSION): Bump this.

	* aot-runtime.c (decode_klass_ref): Clean this up and rename from 
	decode_klass_info.

	* aot-compiler.c (encode_klass_ref): Clean this up and rename from
	encode_klass_info.
	(compile_method): Enable generic sharing.

2007-11-22  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (get_runtime_generic_context_other_ptr): Disable AOT here.
	(mini_method_compile): Add preliminary support for AOTing shared generic code.

	* aot-compiler.c (compile_method): Add preliminary support for AOTing shared
	generic code.

	* mini-trampolines.c: Fix a warning.

	* mini.c (get_runtime_generic_context_other_ptr): Use NEW_METHODCONST instead of
	NEW_PCONST.
	(mono_method_to_ir): Use NEW_DOMAINCONST in one place.
	(generic_class_is_reference_type): Remove unused function.

	* mini-trampolines.c (mono_magic_trampoline): Avoid loading metadata if possible
	in the generic vtable trampoline case.

	* aot-runtime.c (mono_aot_init_vtable): Use the generic vtable trampoline.
	
	* aot-runtime.c (mono_aot_get_method_from_vt_slot): New helper function to
	return an AOT method based on a vtable slot.

	* aot-compiler.c (compile_method): Avoid AOTing synchronized methods for now.

	* mini.c (mini_get_vtable_trampoline): Export this.

2007-11-22  Martin Baulig  <martin@ximian.com>

	* debug-debugger.h
	(MonoDebuggerInfo): Move `debugger_version' up.

2007-11-22  Martin Baulig  <martin@ximian.com>

	* mini-amd64.c
	(mono_arch_get_delegate_invoke_impl): Call mono_debug_add_delegate_trampoline().

	* mini-trampolines.c